addedd links to newsletter

--- a/app/views/newsletters/newsletter_02092013.html.haml
+++ b/app/views/newsletters/newsletter_02092013.html.haml
@@ -26,77 +26,74 @@
                   Unlock the power to create questions inside every Challenge.
                 %li{:style => "margin-bottom:4px;"}
                   %strong MetaBright Labs:
-                  Post and vote on ideas that you think we should implement.
-                  %a{:href => "#"} Try it out!
+                  Post and vote on ideas you think we should implement.
+                  =link_to "Try it out!", "http://www.metabright.com/labs"
                 %li{:style => "margin-bottom:4px;"}
                   %strong Notification settings:
                   Choose the emails you wish to receive from MetaBright.
                 %li{:style => "margin-bottom:4px;"}
                   %strong Edit your profile:
                   Editing your profile is now easier and more intuitive.
-            %tr
-              %tr
-                %td{:style => "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
-                  %span{:style => "font-size: 20px;"} Challenges
-                  %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
-                    %div{:style => "margin-bottom:12px; padding:12px; background-color:whitesmoke; border: 1px solid rgba(0, 0, 0, .1); border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px; "}
-                      %img{:src => "http://moonlite.s3.amazonaws.com/objs/115/original.png?1359821271", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}
-                        %div{:style => "display:inline-block; margin-left:10px; width:84%;"}
-                          %span{:style => "font-size: 16px; font-weight:bold;"} New Challenge!
-                          %span{:style => "font-size:16px;"} Ruby Without Rails
-                          %br/
-                          %ul{:style => "font-size:12px; margin-bottom:0;"}
-                            %li 20 Arena Questions
-                            %li 12 Creative Responses
-                          <button style="float:right; margin-bottom: 0px;margin-top: 0px;vertical-align: middle;display: inline-block;text-shadow: 0 1px 0px black;color: white;padding: 7px 20px 5px 20px;cursor: pointer;font-size: 15px;border: 1px solid #DDD;border-radius: 3px;background-image: -moz-linear-gradient(top, #ee5f5b, #971D1C);background-image: -ms-linear-gradient(top, #ee5f5b, #971D1C);background-image: -o-linear-gradient(top, #ee5f5b, #971D1C);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#971D1C));background-image: -webkit-linear-gradient(top, #ee5f5b, #971D1C);background-image: linear-gradient(top, #ee5f5b, #971D1C);filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');">
-                          Check it out »
-                    %div{:style => "margin-bottom:5px; padding:12px; background-color:whitesmoke; border: 1px solid rgba(0, 0, 0, .1); border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px; "}
-                      %img{:src => "http://moonlite.s3.amazonaws.com/objs/60/original.JPG?1354146690", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}
-                        %div{:style => "display:inline-block; margin-left:10px; width:84%;"}
-                          %span{:style => "font-size: 16px; font-weight:bold;"} New Challenge!
-                          %span{:style => "font-size:16px;"} 7 Natural Wonders of the World
-                          %br/
-                          %ul{:style => "font-size:12px; margin-bottom:0;"}
-                            %li 20 Arena Questions
-                            %li 12 Creative Responses
-                          <button style="float:right; margin-bottom: 0px;margin-top: 0px;vertical-align: middle;display: inline-block;text-shadow: 0 1px 0px black;color: white;padding: 7px 20px 5px 20px;cursor: pointer;font-size: 15px;border: 1px solid #DDD;border-radius: 3px;background-image: -moz-linear-gradient(top, #ee5f5b, #971D1C);background-image: -ms-linear-gradient(top, #ee5f5b, #971D1C);background-image: -o-linear-gradient(top, #ee5f5b, #971D1C);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#971D1C));background-image: -webkit-linear-gradient(top, #ee5f5b, #971D1C);background-image: linear-gradient(top, #ee5f5b, #971D1C);filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');">
-                          Check it out »
-                    %div{:style => "margin-bottom:5px; padding:12px;"}
-                      %img{:src => "http://moonlite.s3.amazonaws.com/objs/44/original.png?1353538042", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}
-                        %div{:style => "display:inline-block; margin-left:10px;"}
-                          %span{:style => "font-size: 16px;"} Ruby on Rails
-                          %br/
-                          %ul{:style => "font-size:12px; margin-bottom:0;"}
-                            %li 7 new Arena Questions added
-                            %li 4 new Tasks added
-                            %li 13 new Creative Response answers
-                    %div{:style => "margin-bottom:5px; padding:12px; "}
-                      %img{:src => "http://moonlite.s3.amazonaws.com/objs/68/original.png?1354911643", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}
-                        %div{:style => "display:inline-block; margin-left:10px;"}
-                          %span{:style => "font-size: 16px;"} jQuery
-                          %br/
-                          %ul{:style => "font-size:12px; margin-bottom:0;"}
-                            %li 7 new Questions added
-                            %li 13 new Creative Response answers
-                    %div{:style => "margin-bottom:5px; padding:12px; "}
-                      %img{:src => "http://moonlite.s3.amazonaws.com/objs/55/original.jpg?1353948550", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}
-                        %div{:style => "display:inline-block; margin-left:10px;"}
-                          %span{:style => "font-size: 16px;"} Excel: Formulas and Functions
-                          %br/
-                          %ul{:style => "font-size:12px; margin-bottom:0;"}
-                            %li 7 new Questions added
-                            %li 13 new Creative Response answers
-                    %div{:style => "margin-bottom:5px; padding:12px; "}
-                      %img{:src => "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}
-                        %div{:style => "display:inline-block; margin-left:10px;"}
-                          %span{:style => "font-size: 16px;"} RubyGems
-                          %br/
-                          %ul{:style => "font-size:12px; margin-bottom:0;"}
-                            %li 7 new Questions added
-                            %li 13 new Creative Response answers
-              %tr
-                %td{:style => "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color:#A0A0A0; padding: 6px 12px 6px 12px"}
-                  %span{:style => "font-size:10px;"}
-                    Adjust your
-                    %a{:href => "#", :style => "color:#00246B; text-decoration:none;"} notification settings
-                    to change which emails you receive from MetaBright.
+      %tr
+        %td{:style => "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
+          %span{:style => "font-size: 20px;"} Challenges
+          %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
+            %div{:style => "margin-bottom:12px; padding:12px; background-color:whitesmoke; border: 1px solid rgba(0, 0, 0, .1); border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px; "}
+              %img{:src => "http://moonlite.s3.amazonaws.com/objs/115/original.png?1359821271", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}=link_to "http://www.metabright.com/challenges/basicclasstest"
+                %div{:style => "display:inline-block; margin-left:10px; width:84%;"}
+                  %span{:style => "font-size: 16px; font-weight:bold;"} New Challenge!
+                  %span{:style => "font-size:16px;"} Ruby Without Rails
+                  %br/
+                  %ul{:style => "font-size:12px; margin-bottom:0;"}
+                    %li 20 Arena Questions
+                    %li 12 Creative Responses
+                  <button style="float:right; margin-bottom: 0px;margin-top: 0px;vertical-align: middle;display: inline-block;text-shadow: 0 1px 0px black;color: white;padding: 7px 20px 5px 20px;cursor: pointer;font-size: 15px;border: 1px solid #DDD;border-radius: 3px;background-image: -moz-linear-gradient(top, #ee5f5b, #971D1C);background-image: -ms-linear-gradient(top, #ee5f5b, #971D1C);background-image: -o-linear-gradient(top, #ee5f5b, #971D1C);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#971D1C));background-image: -webkit-linear-gradient(top, #ee5f5b, #971D1C);background-image: linear-gradient(top, #ee5f5b, #971D1C);filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');">=link_to "Check it out »", "http://www.metabright.com/challenges/basicclasstest"
+            %div{:style => "margin-bottom:5px; padding:12px; background-color:whitesmoke; border: 1px solid rgba(0, 0, 0, .1); border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px; "}
+              %img{:src => "http://moonlite.s3.amazonaws.com/objs/60/original.JPG?1354146690", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}=link_to "http://www.metabright.com/challenges/naturalwondersoftheworld"
+                %div{:style => "display:inline-block; margin-left:10px; width:84%;"}
+                  %span{:style => "font-size: 16px; font-weight:bold;"} New Challenge!
+                  %span{:style => "font-size:16px;"} 7 Natural Wonders of the World
+                  %br/
+                  %ul{:style => "font-size:12px; margin-bottom:0;"}
+                    %li 20 Arena Questions
+                    %li 12 Creative Responses
+                  <button style="float:right; margin-bottom: 0px;margin-top: 0px;vertical-align: middle;display: inline-block;text-shadow: 0 1px 0px black;color: white;padding: 7px 20px 5px 20px;cursor: pointer;font-size: 15px;border: 1px solid #DDD;border-radius: 3px;background-image: -moz-linear-gradient(top, #ee5f5b, #971D1C);background-image: -ms-linear-gradient(top, #ee5f5b, #971D1C);background-image: -o-linear-gradient(top, #ee5f5b, #971D1C);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#971D1C));background-image: -webkit-linear-gradient(top, #ee5f5b, #971D1C);background-image: linear-gradient(top, #ee5f5b, #971D1C);filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ee5f5b', EndColorStr='#971D1C');">=link_to "Check it out »", "http://www.metabright.com/challenges/naturalwondersoftheworld"
+            %div{:style => "margin-bottom:5px; padding:12px;"}
+              %img{:src => "http://moonlite.s3.amazonaws.com/objs/44/original.png?1353538042", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}=link_to "http://www.metabright.com/challenges/rubyonrails"
+                %div{:style => "display:inline-block; margin-left:10px;"}
+                  %span{:style => "font-size: 16px;"} Ruby on Rails
+                  %br/
+                  %ul{:style => "font-size:12px; margin-bottom:0;"}
+                    %li 7 new Arena Questions added
+                    %li 4 new Tasks added
+                    %li 13 new Creative Response answers
+            %div{:style => "margin-bottom:5px; padding:12px; "}
+              %img{:src => "http://moonlite.s3.amazonaws.com/objs/68/original.png?1354911643", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}=link_to "http://www.metabright.com/challenges/jquery"
+                %div{:style => "display:inline-block; margin-left:10px;"}
+                  %span{:style => "font-size: 16px;"} jQuery
+                  %br/
+                  %ul{:style => "font-size:12px; margin-bottom:0;"}
+                    %li 7 new Questions added
+                    %li 13 new Creative Response answers
+            %div{:style => "margin-bottom:5px; padding:12px; "}
+              %img{:src => "http://moonlite.s3.amazonaws.com/objs/55/original.jpg?1353948550", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}=link_to "http://www.metabright.com/challenges/excelformulasandfunctions"
+                %div{:style => "display:inline-block; margin-left:10px;"}
+                  %span{:style => "font-size: 16px;"} Excel: Formulas and Functions
+                  %br/
+                  %ul{:style => "font-size:12px; margin-bottom:0;"}
+                    %li 7 new Questions added
+                    %li 13 new Creative Response answers
+            %div{:style => "margin-bottom:5px; padding:12px; "}
+              %img{:src => "http://moonlite.s3.amazonaws.com/objs/74/original.png?1354916814", :style => "vertical-align:top; width:75px; height:75px; display:inline-block; border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;"}=link_to "http://www.metabright.com/challenges/rubygems"
+                %div{:style => "display:inline-block; margin-left:10px;"}
+                  %span{:style => "font-size: 16px;"} RubyGems
+                  %br/
+                  %ul{:style => "font-size:12px; margin-bottom:0;"}
+                    %li 7 new Questions added
+                    %li 13 new Creative Response answers
+      %tr
+        %td{ style: "padding:3px 12px 6px;"}
+          %span{style:"font-size:10px; color:gray;"}
+            You are receiving this message because #{@user.email} is a member of MetaBright. To adjust your email settings or to unsubscribe, 
+          %span{style:"font-size:10px;"}= link_to "click here.", @settings_url
+          %span{style:"font-size:10px; color:gray;"} MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
