--- a/app/views/pages/email_test.html.haml
+++ b/app/views/pages/email_test.html.haml
@@ -7,6 +7,10 @@
       %div.input
         = text_field_tag :email
     %div.inputs.clearfix
+      %label Mailer
+      %div.input
+        = text_field_tag :mailer, "Mailer"
+    %div.inputs.clearfix
       %label Test
       %div.input
         = text_field_tag :test_method
