--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -7,7 +7,7 @@
       %h1{ style: "display: inline-block;" } MetaBright Labs
     %div
       %h4 Help shape the MetaBright roadmap
-      %p This is where we post some of our planned features and upgrades. Vote for what you think we should prioritize and post ideas for things we should work on next.
+      %p This is where we share some of our planned features and upgrades. Vote for what you think we should prioritize and post ideas for things we should work on next.
   %div.ideas_body
     %div.leftboxheader
       Suggest What's Next
