Rejiggering ideas routing to paths.

--- a/app/views/newsletters/newsletter_02102013.html.haml
+++ b/app/views/newsletters/newsletter_02102013.html.haml
@@ -30,7 +30,7 @@
                   %li{ style: "margin-bottom:4px;"}
                     %strong MetaBright Labs:
                     See whats coming soon and post your own ideas about what you think we should launch next.
-                    =link_to "Try it out!", "http://www.metabright.com/ideas"
+                    =link_to "Try it out!", "http://www.metabright.com/labs"
                   %li{ style: "margin-bottom:4px;"}
                     %strong Notification settings:
                     Choose the emails you wish to receive from MetaBright.
